2005-11-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/export_dialog.rb,
	  lib/alexandria/ui/import_dialog.rb:

	Do not launch the action when the window is destroyed.

2005-10-15  Alexander McCormmach  <alexander@tunicate.org> 

	* lib/alexandria/ui/main_app.rb:

	- Fixed rating column's min and max width to approx. five times
	  the width of the star pixbuf.

	* schemas/alexandria.schemas:

	- Added schema for cols_width property.
	
2005-10-15  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Alexander.

2005-10-15  Alexander McCormmach  <alexander@tunicate.org> 

	* lib/alexandria/ui/main_app.rb:

	- Giving the filter entry box initial input focus ;
	- Fixed the reload keyboard shortcut ;
	- Remember the books table column widths.

	* data/alexandria/glade/main_app.glade:

	Side pane close button shouldn't grab input focus.

	* lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb: 

	Fixed 'pressed' GtkButton events to 'clicked'.

2005-10-13  Laurent Sansonetti  <lrz@gnome.org>

    * lib/alexandria/macui/Icons.rb,
      lib/alexandria/macui/ImportController.rb,
      lib/alexandria/macui/MainController.rb,
      lib/alexandria/macui/TableView.rb,
      lib/alexandria/macui/MainWindow.nib/info.nib,
      lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

    - Fixed the end of the import action ;
    - Double click on a row in the libraries table view will edit ;
    - Added ellipsis after action names in some popup menus ;
    - Set the vertical scrollbar as autohide in the libraries table view ;
    - Double click outside a row in the libraries table view will create a 
      new library ;
    - Double click outside a row in the books table view or a cell in the 
      books matrix will open the add book sheet ;
    - Some cleaning.

2005-10-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,